--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "nomadic_gurukul",
+  "homepage": "https://surajalgouniversity.github.io/nomadic-gurukul-alpha-1/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
